--- a/index.html
+++ b/index.html
@@ -18,81 +18,67 @@
 		</noscript>
 		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+		<script>
+			$(document).ready(function() {
+
+				var id = '#dialog';
+
+				//Get the screen height and width
+				var maskHeight = $(document).height();
+				var maskWidth = $(window).width();
+
+				//Set heigth and width to mask to fill up the whole screen
+				$('#mask').css({
+					'width' : maskWidth,
+					'height' : maskHeight
+				});
+
+				//transition effect
+				$('#mask').fadeIn(500);
+				$('#mask').fadeTo("slow", 0.9);
+
+				//Get the window height and width
+				var winH = $(window).height();
+				var winW = $(window).width();
+
+				//Set the popup window to center
+				$(id).css('top', winH / 2 - $(id).height() / 2);
+				$(id).css('left', winW / 2 - $(id).width() / 2);
+
+				//transition effect
+				$(id).fadeIn(2000);
+
+				//if close button is clicked
+				$('.window .close').click(function(e) {
+					//Cancel the link behavior
+					e.preventDefault();
+
+					$('#mask').hide();
+					$('.window').hide();
+				});
+
+				//if mask is clicked
+				$('#mask').click(function() {
+					$(this).hide();
+					$('.window').hide();
+				});
+
+			});
+		</script>
+
 	</head>
+	
 	<body class="homepage">
 
-	<!--Facebook Like Page -->
-	<div id="fb-root">
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.4";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
-	</script>	
-	</div>
-
-	<!-- Header -->
-		<div id="header">
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<div id="logo">
-					<h1><a href='#'><font face='Sahara'>Lúnula App</font></a></h1>
-					<p><span class="tag">by <font face='Lobster'>onlyapps</font></span></p>
+		<div id="boxes">
+			<div id="dialog" class="window">
+				<img src=("../css/images/icon_lunulaapp.jpg")  style="width:304px;height:228px;">
+				<h1>Como você gostaria de ingressar ao Lúnula App?</h1>
+				<div id="popupfoot">
+					<a href="index_fem.html" class="female">Mulher</a> | <a class="male"style="color:red;" href="#">Homem</a>
 				</div>
 			</div>
-		</div>
-
-	<!-- Featured -->
-		<div id="featured">
-			<div class="container">
-				<header>
-					<h2>Lançamento do nosso app</h2>
-				</header>
-				<p>Estamos <strong>embelezando</strong> nosso app. Cadastre-se e fique sabendo em primeiríssima mão!</p>
-			</div>
-			<form action="http://mailchimp.us8.list-manage.com/subscribe/post" method="post">
-				<div class="input">
-        			<input type="hidden" name="u" value="f527496b3e6470eccc80982da0294aab-us11">
-					<input type="hidden" name="id" value="ebc8b7f4">
-        			<input type="text" class="button" id="email" name="email" placeholder="NOME@EXEMPLO.COM.BR">
-        			<input type="submit" class="button" id="submit" value="AVISE-ME">
-      			</div>
-      		</form>
-		</div>
-
-	<!-- Tweet -->
-		<div id="tweet">
-			<div class="container">
-				<section>
-					<blockquote>&ldquo;O Lúnula App oferece uma forma prática e segura de encontrar profissionais de beleza. O seu estilo até na hora de fazer o cabelo ou as unhas!&rdquo;</blockquote>
-				</section>
-			</div>
-		</div>
-
-	<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<section>
-					<header>
-						<h2><font face='Indie Flower'>Conectada</font></h2>
-						<span class="byline">Conecte-se ao <font face='Indie Flower'>Lúnula App</font> pelas redes sociais</span>
-					</header>
-					<ul class="contact">
-					    <div class="fb-page" data-href="https://www.facebook.com/lunulaapp" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/lunulaapp"><a href="https://www.facebook.com/lunulaapp">Lúnula App</a></blockquote></div></div>
-					</ul>
-				</section>
-			</div>
-		</div>
-
-	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				<p>Development: <a href="http://www.onlyapps.com.br"><font face='Lobster'>onlyapps</font></a></p>
-				<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
-			</div>
+			<div id="mask"></div>
 		</div>
 
 	</body>
