--- a/index.html
+++ b/index.html
@@ -57,25 +57,19 @@
 					$('.window').hide();
 				});
 
-				//if mask is clicked
-				$('#mask').click(function() {
-					$(this).hide();
-					$('.window').hide();
-				});
-
 			});
 		</script>
 
 	</head>
 	
-	<body class="homepage">
+	<body class="homepage" background="../images/lunula_app.jpeg">
 
 		<div id="boxes">
 			<div id="dialog" class="window">
-				<img src=("../css/images/icon_lunulaapp.jpg")  style="width:304px;height:228px;">
+				<img src="icon_lunulaapp.jpg" alt="Lúnula App"  style="width:114px;height:114px;">
 				<h1>Como você gostaria de ingressar ao Lúnula App?</h1>
 				<div id="popupfoot">
-					<a href="index_fem.html" class="female">Mulher</a> | <a class="male"style="color:red;" href="#">Homem</a>
+					<a href="index_fem.html" class="female" style="color:red">Mulher</a> | <a class="male" style="color:blue;" href="#">Homem</a>
 				</div>
 			</div>
 			<div id="mask"></div>
