--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
 	</head>
 	
-	<body class="homepage" background="../images/lunula_app.jpeg">
+	<body class="homepage">
 
 		<div id="boxes">
 			<div id="dialog" class="window">
