Male e Female styles

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<img src="icon_lunulaapp.jpg" alt="Lúnula App"  style="width:114px;height:114px;">
 				<h1>Como você gostaria de ingressar ao Lúnula App?</h1>
 				<div id="popupfoot">
-					<a href="index_fem.html" class="female" style="color:red">Mulher</a> | <a class="male" style="color:blue;" href="#">Homem</a>
+					<a href="index_fem.html" class="female" style="color:red">Mulher</a> | <a class="male" style="color:blue;" href="index_male.html">Homem</a>
 				</div>
 			</div>
 			<div id="mask"></div>
