--- a/index_fem.html
+++ b/index_fem.html
@@ -10,7 +10,11 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src="js/fem_init.js"></script>
+		<script>
+		var lunula-image1 == "../images/fem_lunula-image1.jpg";
+		var lunula-image2 == "../images/fem_lunula-image1.jpg";
+		</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
 			<link rel="stylesheet" href="css/style.css" />
@@ -36,7 +40,6 @@
 	<!-- Header -->
 		<div id="header">
 			<div class="container"> 
-				
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href='#'><font face='Sahara'>Lúnula App</font></a></h1>
@@ -89,7 +92,7 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				<p>Development: <a href="http://www.onlyapps.com.br"><font face='Lobster'>onlyapps</font></a></p>
+				<p>Copyright: <a href="#"><font face='Lobster'>Lúnula App</font></a></p>
 				<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
 			</div>
 		</div>
