Male e Female styles e index

--- a/index_fem.html
+++ b/index_fem.html
@@ -11,13 +11,9 @@
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/fem_init.js"></script>
-		<script>
-		var lunula-image1 == "../images/fem_lunula-image1.jpg";
-		var lunula-image2 == "../images/fem_lunula-image1.jpg";
-		</script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/male_style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
