--- a/index_male.html
+++ b/index_male.html
@@ -13,7 +13,7 @@
 		<script src="js/male_init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/fem_style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
@@ -50,7 +50,7 @@
 				<header>
 					<h2>Lançamento do nosso app</h2>
 				</header>
-				<p>Estamos <strong>embelezando</strong> nosso app. Cadastre-se e fique sabendo em primeiríssima mão!</p>
+				<p>Estamos <strong>aparando</strong> nosso app. Cadastre-se e fique sabendo em primeira mão!</p>
 			</div>
 			<form action="http://mailchimp.us8.list-manage.com/subscribe/post" method="post">
 				<div class="input">
@@ -66,7 +66,7 @@
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;O Lúnula App oferece uma forma prática e segura de encontrar profissionais de beleza. O seu estilo até na hora de fazer o cabelo ou as unhas!&rdquo;</blockquote>
+					<blockquote>&ldquo;O Lúnula App oferece uma forma prática e segura de encontrar profissionais de beleza. O seu estilo até na hora de fazer o cabelo ou a barba!&rdquo;</blockquote>
 				</section>
 			</div>
 		</div>
@@ -76,7 +76,7 @@
 			<div class="container">
 				<section>
 					<header>
-						<h2><font face='Indie Flower'>Conectada</font></h2>
+						<h2><font face='Indie Flower'>Conectado</font></h2>
 						<span class="byline">Conecte-se ao <font face='Indie Flower'>Lúnula App</font> pelas redes sociais</span>
 					</header>
 					<ul class="contact">
