--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<script src="js/init.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
+			<link rel="stylesheet" href="css/male_style.css" />
+			<link rel="stylesheet" href="css/fem_style.css" />
 			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
