--- a/index_fem.html
+++ b/index_fem.html
@@ -51,11 +51,11 @@
 				</header>
 				<p>Estamos <strong>embelezando</strong> nosso app. Cadastre-se e fique sabendo em primeiríssima mão!</p>
 			</div>
-			<form action="http://mailchimp.us8.list-manage.com/subscribe/post" method="post">
+			<form action="//appsonly.us11.list-manage.com/subscribe/post?u=f542d1a1df05af4f18d88f286&amp;id=ebc8b7f463" method="post">
 				<div class="input">
         			<input type="hidden" name="u" value="f527496b3e6470eccc80982da0294aab-us11">
 					<input type="hidden" name="id" value="ebc8b7f4">
-        			<input type="text" class="button" id="email" name="email" placeholder="NOME@EXEMPLO.COM.BR">
+        			<input type="text" class="button" id="email" name="EMAIL" placeholder="NOME@EXEMPLO.COM.BR">
         			<input type="submit" class="button" id="submit" value="AVISE-ME">
       			</div>
       		</form>
