--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="" />
 		<!-- Ver palavras chaves para o site-->
 		<meta name="keywords" content="" />
+		<meta name="google-site-verification" content="fRbMH05Q_d3q7UVb2bbnsUK1wZyHkVqmpdCw5ow1KCc" />
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
