--- a/index_fem.html
+++ b/index_fem.html
@@ -35,6 +35,15 @@
 
 	<!-- Header -->
 		<div id="header">
+			<div id="nav-wrapper"> 
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li class="active"><a href="index_fem.html" style="color:red"><b>Mulher</b></a></li>
+						<li><a href="index_male.html" style="color:blue">Homem</a></li>
+					</ul>
+				</nav>
+			</div>
 			<div class="container"> 
 				<!-- Logo -->
 				<div id="logo">
