--- a/index_male.html
+++ b/index_male.html
@@ -32,9 +32,21 @@
 	}(document, 'script', 'facebook-jssdk'));
 	</script>	
 	</div>
+	
+	
 
 	<!-- Header -->
 		<div id="header">
+			<div id="nav-wrapper"> 
+				<!-- Nav -->
+				<nav id="nav">
+					<ul>
+						<li><a href="index_fem.html" style="color:red">Mulher</a></li>
+						<li class="active"><a href="index_male.html" style="color:blue"><b>Homem</b></a></li>
+					</ul>
+				</nav>
+			</div>
+			
 			<div class="container"> 
 				
 				<!-- Logo -->
