--- a/index_fem.html
+++ b/index_fem.html
@@ -18,33 +18,59 @@
 		</noscript>
 		<link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+		<script>
+			(function(i, s, o, g, r, a, m) {
+				i['GoogleAnalyticsObject'] = r;
+				i[r] = i[r] ||
+				function() {
+					(i[r].q = i[r].q || []).push(arguments)
+				}, i[r].l = 1 * new Date();
+				a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0];
+				a.async = 1;
+				a.src = g;
+				m.parentNode.insertBefore(a, m)
+			})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+			ga('create', 'UA-69256527-1', 'auto');
+			ga('send', 'pageview');
+
+		</script>
 	</head>
 	<body class="homepage">
 
-	<!--Facebook Like Page -->
-	<div id="fb-root">
-	<script>(function(d, s, id) {
-	  var js, fjs = d.getElementsByTagName(s)[0];
-	  if (d.getElementById(id)) return;
-	  js = d.createElement(s); js.id = id;
-	  js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.4";
-	  fjs.parentNode.insertBefore(js, fjs);
-	}(document, 'script', 'facebook-jssdk'));
-	</script>	
-	</div>
+		<!--Facebook Like Page -->
+		<div id="fb-root">
+			<script>
+				( function(d, s, id) {
+						var js,
+						    fjs = d.getElementsByTagName(s)[0];
+						if (d.getElementById(id))
+							return;
+						js = d.createElement(s);
+						js.id = id;
+						js.src = "//connect.facebook.net/pt_BR/sdk.js#xfbml=1&version=v2.4";
+						fjs.parentNode.insertBefore(js, fjs);
+					}(document, 'script', 'facebook-jssdk'));
+			</script>
+		</div>
 
-	<!-- Header -->
+		<!-- Header -->
 		<div id="header">
-			<div id="nav-wrapper"> 
+			<div id="nav-wrapper">
 				<!-- Nav -->
 				<nav id="nav">
 					<ul>
-						<li class="active"><a href="index_fem.html" style="color:red"><b>Mulher</b></a></li>
-						<li><a href="index_male.html" style="color:blue">Homem</a></li>
+						<li class="active">
+							<a href="index_fem.html" style="color:red"><b>Mulher</b></a>
+						</li>
+						<li>
+							<a href="index_male.html" style="color:blue">Homem</a>
+						</li>
 					</ul>
 				</nav>
 			</div>
-			<div class="container"> 
+			<div class="container">
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href='#'><font face='Sahara'>Lúnula App</font></a></h1>
@@ -52,34 +78,38 @@
 			</div>
 		</div>
 
-	<!-- Featured -->
+		<!-- Featured -->
 		<div id="featured">
 			<div class="container">
 				<header>
 					<h2>Lançamento do nosso app</h2>
 				</header>
-				<p>Estamos <strong>embelezando</strong> nosso app. Cadastre-se e fique sabendo em primeiríssima mão!</p>
+				<p>
+					Estamos <strong>embelezando</strong> nosso app. Cadastre-se e fique sabendo em primeiríssima mão!
+				</p>
 			</div>
 			<form action="//appsonly.us11.list-manage.com/subscribe/post?u=f542d1a1df05af4f18d88f286&amp;id=ebc8b7f463" method="post">
 				<div class="input">
-        			<input type="hidden" name="u" value="f527496b3e6470eccc80982da0294aab-us11">
+					<input type="hidden" name="u" value="f527496b3e6470eccc80982da0294aab-us11">
 					<input type="hidden" name="id" value="ebc8b7f4">
-        			<input type="text" class="button" id="email" name="EMAIL" placeholder="NOME@EXEMPLO.COM.BR">
-        			<input type="submit" class="button" id="submit" value="AVISE-ME">
-      			</div>
-      		</form>
+					<input type="text" class="button" id="email" name="EMAIL" placeholder="NOME@EXEMPLO.COM.BR">
+					<input type="submit" class="button" id="submit" value="AVISE-ME">
+				</div>
+			</form>
 		</div>
 
-	<!-- Tweet -->
+		<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;O Lúnula App oferece uma forma prática e segura de encontrar profissionais de beleza. O seu estilo até na hora de fazer o cabelo ou as unhas!&rdquo;</blockquote>
+					<blockquote>
+						&ldquo;O Lúnula App oferece uma forma prática e segura de encontrar profissionais de beleza. O seu estilo até na hora de fazer o cabelo ou as unhas!&rdquo;
+					</blockquote>
 				</section>
 			</div>
 		</div>
 
-	<!-- Footer -->
+		<!-- Footer -->
 		<div id="footer">
 			<div class="container">
 				<section>
@@ -88,17 +118,27 @@
 						<span class="byline">Conecte-se ao <font face='Indie Flower'>Lúnula App</font> pelas redes sociais</span>
 					</header>
 					<ul class="contact">
-					    <div class="fb-page" data-href="https://www.facebook.com/lunulaapp" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/lunulaapp"><a href="https://www.facebook.com/lunulaapp">Lúnula App</a></blockquote></div></div>
+						<div class="fb-page" data-href="https://www.facebook.com/lunulaapp" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+							<div class="fb-xfbml-parse-ignore">
+								<blockquote cite="https://www.facebook.com/lunulaapp">
+									<a href="https://www.facebook.com/lunulaapp">Lúnula App</a>
+								</blockquote>
+							</div>
+						</div>
 					</ul>
 				</section>
 			</div>
 		</div>
 
-	<!-- Copyright -->
+		<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				<p>Copyright: <a href="#"><font face='Lobster'>Lúnula App</font></a></p>
-				<p>Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)</p>
+				<p>
+					Copyright: <a href="#"><font face='Lobster'>Lúnula App</font></a>
+				</p>
+				<p>
+					Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				</p>
 			</div>
 		</div>
 
